@@ -130,6 +130,7 @@ playlist.wpl application/vnd.ms-wpl
 # text
 text-iso8859-15.txt text/plain ox
 text-utf8.txt text/plain ox
+test.tex text/x-tex
 # Copied from http://www.computerperformance.co.uk/vista/vista_reg_examples.htm
 registry.reg text/x-ms-regedit
 # Copied from http://www.ss64.com/nt/regedit.html
