@@ -1,0 +1,4 @@
+\documentclass[12pt]{beamer}
+
+this paragraph should not match graphviz (#22534).
+
