@@ -8,8 +8,16 @@
 
 2009-10-06  David Faure  <faure@kde.org>
 
+	* freedesktop.org.xml.in: Make text/vnd.graphviz magic stricter
+	so that it doesn't match "paragraph ". (Closes: #22534)
+	* tests/list:
+	* tests/test.tex: Testcase for the above problem.
+
+2009-10-06  David Faure  <faure@kde.org>
+
 	* freedesktop.org.xml.in: Add kexi mimetypes (from #18109)
 	even though the xdgmime bug mentionned in #18109 isn't fixed.
+
 	* tests/list:
 	* tests/sqlite2.kexi:
 	* tests/sqlite3.kexi: Add testcase for kexi mimetypes.
